deploy/kustomize/unbound/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unbound
  labels:
    app.kubernetes.io/name: unbound
    app.kubernetes.io/component: dns
    app.kubernetes.io/part-of: docker-mailserver
spec:
  type: ClusterIP
  ports:
    - name: dns
      port: 53
      protocol: UDP
      targetPort: dns
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: dns-tcp
  selector:
    app.kubernetes.io/name: unbound
    app.kubernetes.io/component: dns
    app.kubernetes.io/part-of: docker-mailserver
